<resources>
    <string name="app_name">K234112EApp</string>
    <string name="str_welcome">Welcome to K234112E</string>
    <string name="str_say_hello">HELLO K234112E</string>v
    <string name="str_clickme_to_say_hello">Say hello</string>
    <string name="str_login_System">Login System</string>
    <string name="str_user_name">User name:</string>
    <string name="str_hint_username">Enter your username</string>
    <string name="str_password">Password:</string>
    <string name="str_hint_password">Enter your password</string>
    <string name="str_login">Login</string>
    <string name="str_Exit">Exit</string>
    <string name="str_login_successful">Login successful!!!</string>
    <string name="str_login_failed">Login failed!!!</string>
    <string name="str_exit">Exxit</string>
    <string name="str_message">Message</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open calculator App</string>
    <string name="str_save_login_infor">Save Login Information</string>
    <string name="str_login_role">Login Role</string>
    <string name="str_role_admin">Administrator</string>
    <string name="str_role_employee">Employee</string>
    <string name="str_confirm">CONFIRM EXIT</string>
    <string name="str_message_confirm">EXIT?</string>
    <string name="str_positive">YASSS</string>
    <string name="str_negative">NOO</string>
    <string name="str_error">ERROR</string>
    <string name="str_employee_id">EMployee ID:</string>
    <string name="str_employee_name">Employee Name:</string>
    <string name="str_phone">Phone Number:</string>
    <string name="str_save">Save</string>
    <string name="str_Delete">Delete</string>
    <string name="str_confirm_exit">Are you sure? You want to exit?</string>


</resources><!-- CÓ BNH CHUỖI LÀ THÊM BẤY NHIÊU CHỨ HK HẢD CODE -->