<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_log"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="210dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login_System"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/str_user_name"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/str_hint_username"
        android:inputType="text"
        android:maxWidth="488dp"
        android:text="admin"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="TextView"
        android:textSize="26sp"
        tools:text="@string/str_password" />

    <EditText
        android:text="123"
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="488dp"
        android:ems="10"
        android:hint="@string/str_hint_password"
        android:inputType="text"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/chkSaveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_save_login_infor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="loginSystem"
            android:text="@string/str_login" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Exit"
            android:text="@string/str_Exit" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"/>


</LinearLayout>